[package]
name = "sklears-linear"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Linear models for sklears: linear regression, logistic regression, and GLMs"
keywords = ["machine-learning", "linear-regression", "logistic-regression", "glm"]
categories = ["science", "mathematics"]

[dependencies]
# SciRS2 Policy Compliant Dependencies
sklears-core = { workspace = true }
scirs2-core = { workspace = true }

# Core SciRS2 modules for Linear Models
scirs2-optimize = { workspace = true }  # For optimization algorithms (SGD, LBFGS, etc.)
scirs2-linalg = { workspace = true }    # For linear algebra operations
scirs2-sparse = { workspace = true, optional = true }  # For sparse matrix support

# Standard Rust dependencies
thiserror = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
approx = { workspace = true }
log = { workspace = true }

# TRANSITIONAL: Legacy dependencies during SciRS2 migration
# These will be removed once full SciRS2 API coverage is available
scirs2-autograd = { workspace = true }  # TRANSITIONAL: For array! macro and ndarray types
memmap2 = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
oxicode = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
sklears-metrics = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["std", "linear-regression", "ridge", "lasso", "coordinate-descent", "early-stopping"]
std = ["sklears-core/std"]

# Core algorithm groups
linear-regression = []
ridge = []
lasso = []
elastic-net = ["lasso", "ridge"]
logistic-regression = []
glm = []

# Advanced algorithms
bayesian = []
quantile-regression = []
robust-regression = ["huber", "ransac", "theil-sen"]
huber = []
ransac = []
theil-sen = []

# Multi-task learning
multi-task = ["multi-task-lasso", "multi-task-elastic-net"]
multi-task-lasso = ["lasso"]
multi-task-elastic-net = ["elastic-net"]

# Optimization and solvers
coordinate-descent = []
admm = []
sgd = []
online-learning = ["sgd"]
constrained-optimization = []

# Advanced features
feature-selection = []
cross-validation = []
regularization-path = []
early-stopping = []

# Performance and memory
parallel = ["rayon"]
simd = []
gpu = ["sklears-core/gpu_support"]
memory-mapping = []
streaming = []
chunked-processing = ["memory-mapping"]

# Sparse matrix support
sparse = ["dep:scirs2-sparse"]

# Serialization and persistence
serde = ["dep:serde", "sklears-core/serde", "oxicode", "serde_json", "rmp-serde", "chrono"]

# Diagnostics and analysis
diagnostics = []
uncertainty-quantification = ["bayesian"]
convergence-analysis = []
residual-analysis = []

# Visualization and reporting
plotting = []
reporting = []

# Development and testing
property-testing = []
benchmarking = []

# All algorithms (for convenience)
all-algorithms = [
    "linear-regression", "ridge", "lasso", "elastic-net", "logistic-regression", "glm",
    "bayesian", "quantile-regression", "robust-regression", "multi-task"
]

# All solvers (for convenience)
all-solvers = [
    "coordinate-descent", "admm", "sgd", "online-learning", "constrained-optimization"
]

# All features (for comprehensive builds)
full = [
    "all-algorithms", "all-solvers", "feature-selection", "cross-validation", 
    "regularization-path", "early-stopping", "parallel", "simd", "gpu", "memory-mapping",
    "streaming", "sparse", "serde", "diagnostics", "uncertainty-quantification",
    "convergence-analysis", "residual-analysis", "plotting", "reporting"
]
