[package]
name = "sklears-manifold"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["machine-learning", "manifold-learning", "manifold-reduction"]
categories = ["science", "mathematics"]
description = "Manifold learning algorithms (t-SNE, Isomap, etc.)"

[dependencies]
sklears-core = { workspace = true }
sklears-utils = { workspace = true }
# SciRS2 Policy Compliant Dependencies
scirs2-core = { workspace = true }
scirs2-stats = { workspace = true }  # For statistical manifold methods
scirs2-linalg = { workspace = true }  # For linear algebra operations

# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ ndarray - use scirs2_core::ndarray instead (SciRS2 Policy)
# ❌ ndarray-linalg - use scirs2-linalg instead (SciRS2 Policy)
# ❌ rand - use scirs2_core::random instead (SciRS2 Policy)
# ❌ rand_distr - use scirs2_core::random distributions instead (SciRS2 Policy)
# ❌ scirs2-autograd - transitional dependency removed (SciRS2 Policy)
thiserror = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
rmp-serde = { version = "1.3", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
once_cell = { version = "1.21" }
wgpu = { version = "24.0", optional = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.23"

[features]
default = []
serde = ["dep:serde", "sklears-core/serde"]
serialization = ["serde", "dep:serde_json", "dep:bincode", "dep:rmp-serde", "dep:chrono"]
gpu = ["dep:wgpu"]

