[package]
name = "sklears-metrics"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Evaluation metrics for sklears: accuracy, precision, recall, F1, ROC-AUC, etc."
keywords = ["machine-learning", "metrics", "evaluation", "accuracy"]
categories = ["science", "mathematics"]

[dependencies]
# Core sklears dependencies
sklears-core = { workspace = true }

# SciRS2 dependencies (core foundation per SciRS2 policy)
scirs2-core = { workspace = true }
scirs2-optimize = { workspace = true }
# ❌ REMOVED: scirs2-autograd - use scirs2_core::ndarray instead
scirs2-linalg = { workspace = true, optional = true }
scirs2-stats = { workspace = true }
scirs2-metrics = { workspace = true, optional = true }

# Approved numerical dependencies
approx = { workspace = true }
thiserror = { workspace = true }

# Sparse matrix support

# Performance and parallelism
rayon = { workspace = true, optional = true }
wide = { version = "0.7", optional = true }
bytemuck = { version = "1.24", optional = true }
memmap2 = { version = "0.9", optional = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }

# Serialization
serde = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

# LaTeX/PDF export functionality
# TODO: Replace with 'latex = "0.3"' crate when implementing LaTeX export feature
# tex = { version = "0.1", optional = true }  # Disabled: uses outdated syn 0.14.9 with future incompatibility warnings
tinytemplate = { version = "1.2", optional = true }
chrono = { workspace = true }

# Compression and I/O
flate2 = "1.1"

# Async functionality
tokio = { version = "1.47", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Distributed computing (MPI-style)
# Note: default-features = false disables libffi to avoid ARM64 macOS compilation issues
mpi = { version = "0.8", optional = true, default-features = false }
bincode = { version = "1.3", optional = true }

# Note: ndarray and rand are provided through SciRS2 dependencies
# Direct ndarray/rand imports are not used per SciRS2 policy

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"

[features]
default = ["std"]
std = ["sklears-core/std"]
parallel = ["rayon"]
simd = ["wide", "bytemuck"]
# sparse = ["sprs"]  # Removed: Use scirs2-sparse instead (SciRS2 Policy)
gpu = []  # GPU acceleration support (temporarily disabled)
cuda = ["gpu"]  # Alias for GPU support
async = ["tokio", "futures", "tokio-stream"]  # Async streaming support
optimized = ["parallel", "simd"]
serde = ["dep:serde", "dep:serde_json", "sklears-core/serde"]
mmap = ["memmap2"]
latex = ["tinytemplate"]  # LaTeX/PDF export functionality (tex disabled until migration to latex crate)
distributed = ["mpi", "bincode"]  # Message-passing distributed metrics (requires full MPI installation)
disabled-for-stability = []  # Feature flag for experimental/unstable code
# Note: "distributed" excluded from "full" due to platform-specific MPI requirements
# Note: "sparse" removed from "full" - use scirs2-sparse instead (SciRS2 Policy)
full = ["parallel", "simd", "gpu", "async", "latex", "mmap"]

[[bench]]
name = "metrics_benchmarks"
harness = false
