[package]
name = "sklears-multioutput"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["machine-learning", "multi-output", "multi-target"]
categories = ["science", "mathematics"]
description = "Multi-output regression and classification"

[dependencies]
sklears-core = { workspace = true }
sklears-utils = { workspace = true }
numrs2 = { workspace = true }
# SciRS2 Policy Compliant Dependencies
scirs2-core = { workspace = true, features = ["random", "array"] }
scirs2-stats = { workspace = true }  # For statistical multi-output methods

# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ scirs2-autograd - transitional dependency removed (SciRS2 Policy)
# ❌ ndarray - use scirs2_core::ndarray instead (SciRS2 Policy)
# ❌ ndarray-rand - use scirs2_core::random instead (SciRS2 Policy)
# ❌ rand - use scirs2_core::random instead (SciRS2 Policy)
# ❌ rand_chacha - use scirs2_core::random internal RNGs instead (SciRS2 Policy)
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde", "sklears-core/serde"]
