[package]
name = "sklears-neighbors"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Neighbor-based algorithms for sklears: k-NN, radius neighbors"
keywords = ["machine-learning", "knn", "k-nearest-neighbors", "neighbors"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# SciRS2 Policy Compliant Dependencies
sklears-core = { workspace = true }
sklears-utils = { workspace = true }
scirs2-core = { workspace = true }

# Core SciRS2 modules for Neighbors
# Note: Neighbors primarily uses SIMD operations from scirs2-core

# Standard Rust dependencies
thiserror = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }

# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ scirs2-autograd - use scirs2_core::ndarray instead
# ❌ ndarray - use scirs2_core::ndarray instead
# ❌ rand - use scirs2_core::random instead
# ❌ rand_distr - use scirs2_core::random instead

[dev-dependencies]
criterion = { workspace = true }
sklears-metrics = { workspace = true }
approx = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
# ❌ REMOVED: rand - use scirs2_core::random instead

[features]
default = ["std"]
std = ["sklears-core/std"]
parallel = ["rayon"]
serde = ["dep:serde", "sklears-core/serde"]
memmap = ["dep:memmap2"]

[[bench]]
name = "knn_bench"
harness = false

[[bench]]
name = "comprehensive_bench"
harness = false
