[package]
name = "sklears-neural"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Neural network implementations for the sklears machine learning library"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["machine-learning", "neural-networks", "mlp", "backpropagation", "rust"]
categories = ["algorithms", "mathematics", "science"]

# SciRS2 Policy Compliant Dependencies
[dependencies]
sklears-core = { workspace = true }
# sklears-utils = { workspace = true }  # Temporarily disabled due to compilation issues
# sklears-metrics = { workspace = true }  # Temporarily disabled due to compilation issues
scirs2-core = { workspace = true }
# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ scirs2-autograd - use scirs2_core::ndarray instead
# ❌ ndarray - use scirs2_core::ndarray instead
# ❌ ndarray-rand - use scirs2_core::random instead
# ❌ rand - use scirs2_core::random instead
# ❌ rand_distr - use scirs2_core::random instead
# ❌ rand_chacha - use scirs2_core::random instead
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
oxicode = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }
# cudarc = { version = "0.12", features = ["cublas", "cublaslt", "curand"], optional = true }  # Disabled for macOS compatibility
bytemuck = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
half = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
# sklears-preprocessing = { workspace = true }  # Temporarily disabled due to compilation issues
# sklears-utils = { workspace = true }         # Temporarily disabled due to compilation issues

[features]
default = []
parallel = ["rayon"]
# gpu = ["cudarc", "bytemuck", "half"]  # Disabled for macOS compatibility
serde = ["dep:serde", "dep:serde_json", "dep:serde_yaml", "dep:chrono", "dep:oxicode", "dep:flate2"]
mmap = ["memmap2"]

[[example]]
name = "rbm_demo"
path = "examples/rbm_demo.rs"

[[example]]
name = "autoencoder_demo"
path = "examples/autoencoder_demo.rs"
