[lints]
workspace = true

[package]
name = "sklears-neural"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Neural network implementations for the sklears machine learning library"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["machine-learning", "neural-networks", "mlp", "backpropagation", "rust"]
categories = ["algorithms", "mathematics", "science"]

# SciRS2 Policy Compliant Dependencies
[dependencies]
sklears-core = { workspace = true }
# sklears-utils = { workspace = true }  # Temporarily disabled due to compilation issues
# sklears-metrics = { workspace = true }  # Temporarily disabled due to compilation issues
scirs2-core = { workspace = true }
# ❌ REMOVED: Legacy dependencies (SciRS2 Policy violations)
# ❌ scirs2-autograd - use scirs2_core::ndarray instead
# ❌ ndarray - use scirs2_core::ndarray instead
# ❌ ndarray-rand - use scirs2_core::random instead
# ❌ rand - use scirs2_core::random instead
# ❌ rand_distr - use scirs2_core::random instead
# ❌ rand_chacha - use scirs2_core::random instead
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
oxicode = { workspace = true, optional = true }
oxiarc-deflate = { workspace = true, optional = true }
thiserror = { workspace = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }
oxicuda-driver = { workspace = true, optional = true }
oxicuda-blas   = { workspace = true, optional = true, features = ["f16"] }
oxicuda-dnn    = { workspace = true, optional = true }
oxicuda-ptx    = { workspace = true, optional = true }
oxicuda-memory = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
half = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
# sklears-preprocessing = { workspace = true }  # Temporarily disabled due to compilation issues
# sklears-utils = { workspace = true }         # Temporarily disabled due to compilation issues

[features]
default = []
parallel = ["rayon"]
gpu = ["dep:oxicuda-driver", "dep:oxicuda-blas", "dep:oxicuda-dnn", "dep:oxicuda-ptx", "dep:oxicuda-memory", "bytemuck", "half", "sklears-core/gpu_support"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_yaml", "dep:chrono", "dep:oxicode", "dep:oxiarc-deflate"]
mmap = ["memmap2"]

[[example]]
name = "rbm_demo"
path = "examples/rbm_demo.rs"

[[example]]
name = "autoencoder_demo"
path = "examples/autoencoder_demo.rs"

[[bench]]
name = "mlp_training_benchmarks"
harness = false
